--- a/src/pages/image-info-helper.css
+++ b/src/pages/image-info-helper.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
-
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -99,16 +97,24 @@
 
   body {
     @apply bg-background text-foreground;
+
+    font-size: x-large;
   }
 }
 
 html {
+  background-color: black;
+}
+
+#root, html, #root > div {
   max-height: 1350px;
   max-width: 1080px;
-  background-color: hsl(0deg 0% 0%);
+}
 
-  /*font-family: "Raleway", serif;*/
-  /*font-optical-sizing: auto;*/
-  /*font-weight: 400;*/
-  /*font-style: normal;*/
+#root #image {
+  max-height: calc(1350px - 4rem)
+}
+
+#root:has(#exif-info) #image {
+  max-height: calc(1350px - 8rem)
 }
